--- a/basics/adder/test/dune
+++ b/basics/adder/test/dune
@@ -1,6 +1,8 @@
 (library
  (name addertest)
- (inline_tests) 
- (preprocess (pps ppx_inline_test))
+ (inline_tests)
+ (preprocess
+  (pps ppx_inline_test))
  (libraries adder))
- 
+(test
+ (name adder))
