added expr exercices

--- a/expr/andboolexpr/test/dune
+++ b/expr/andboolexpr/test/dune
@@ -1,5 +1,8 @@
 (library
  (name andboolexpr)
- (inline_tests) 
- (preprocess (pps ppx_inline_test))
+ (inline_tests)
+ (preprocess
+  (pps ppx_inline_test))
  (libraries andboolexprLib))
+
+
