--- a/expr/arithexpr/test/dune
+++ b/expr/arithexpr/test/dune
@@ -1,5 +1,7 @@
 (library
  (name arithexpr)
- (inline_tests) 
- (preprocess (pps ppx_inline_test))
+ (inline_tests)
+ (preprocess
+  (pps ppx_inline_test))
  (libraries arithexprLib))
+
