added sarithexpr exercices

--- a/expr/sarithexpr/test/dune
+++ b/expr/sarithexpr/test/dune
@@ -1,5 +1,6 @@
 (library
  (name sarithexpr)
- (inline_tests) 
- (preprocess (pps ppx_inline_test))
+ (inline_tests)
+ (preprocess
+  (pps ppx_inline_test))
  (libraries sarithexprLib))
